tests/parsing/smtlib/v2.6/errors/142_declare-fun_arg_list_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/142_declare-fun_arg_list_unclosed_1.smt2", line 2, character 22-23:
2 | (declare-fun foo (int _))
                          ^
Error while parsing a list of sorts, read the reserved word '_',
      but expected another sort or a closing parenthesis.
